--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_APP_APPWRITE_ENDPOINT = "https://cloud.appwrite.io/v1"
 VITE_APP_APPWRITE_PROJECT_ID = "65c2b9b3cfa78c57b6f6"
+VITE_APP_APPWRITE_EVENTS_DATABASE_ID = "65c2bcc211e372602fc5"
+VITE_APP_APPWRITE_EVENTS_COLLECTION_ID = "65c2bceedf4176244530"
